--- a/src/app/components/nabvar/menu-item/menu-item.component.html
+++ b/src/app/components/nabvar/menu-item/menu-item.component.html
@@ -1,5 +1,5 @@
 <!-- Presentation Section -->
-<section id="presentation" class="container py-5">
+<section id="presentation" class="py-5">
   <h2 class="text-center mb-4">¿Por qué elegirnos?</h2>
   <div class="row">
     <div class="col-md-4 mb-4">
