--- a/src/app/components/nabvar/nabvar.component.html
+++ b/src/app/components/nabvar/nabvar.component.html
@@ -1,7 +1,7 @@
 <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <!-- Navbar a la izquierda -->
-    <a class="navbar-brand me-auto" href="#">Navbar</a>
+    <img src="../../../assets/salem_final.png" class="navbar-brand me-auto img" href="#">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
