--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ html, body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden; /* Asegura que no haya desplazamiento horizontal */
+    overflow-x: auto; /* Asegura que no haya desplazamiento horizontal */
     scroll-behavior: smooth;
   }
   
