--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,8 +1,12 @@
 <!-- Banner Section -->
 <section id="banner" class="banner">
-    <div class="banner-content">
-      <h1>Somos tu socio Tecnologico</h1>
-      <p>Descripción breve o lema aquí</p>
-    </div>
+  <video autoplay muted loop id="banner-video">
+    <source src="../../../assets/1118472_Macro_4k_1920x1080.mp4" type="video/mp4">
+  </video>
+  <div id="banner-content">
+    <img src="../../../assets/salem_final.png" alt="Logo" id="banner-logo">
+    <h2 id="banner-text">El socio tecnológico a su medida
+    </h2>
+  </div>
   </section>
   
