--- a/src/app/components/nabvar/nabvar.component.scss
+++ b/src/app/components/nabvar/nabvar.component.scss
@@ -15,15 +15,15 @@
   top: 0;
   width: 100%;
   z-index: 1000;
-  background: linear-gradient(to right, #ffffff, rgb(1, 26, 100)); /* De blanco a azul oscuro */
+  background: linear-gradient(to right, #000000, rgb(2, 65, 255)); /* De blanco a azul oscuro */
   background-size: 200% 100%; /* Asegura que el gradiente cubra el área y permita la animación */
   animation: gradientAnimation 10s ease infinite; /* Aplica la animación del gradiente */
   .navbar-brand,
   .nav-link {
-    color: black; /* Color de texto inicial */
+    color: white; /* Color de texto inicial */
     transition: color 0.3s ease; /* Suaviza la transición del color */
     &:hover {
-      color: #ffffff; /* Blanco al pasar el mouse */
+      color: #000000; /* Blanco al pasar el mouse */
     }
   }
   .navbar-toggler {
