--- a/src/app/components/nabvar/menu-item/menu-item.component.html
+++ b/src/app/components/nabvar/menu-item/menu-item.component.html
@@ -10,6 +10,7 @@
       </div>
     </div>
   </div>
+  <div class="divider"></div>
   <div class="content-wrapper ">
     <img
       src="../../../../assets/equipos-de-trabajo.jpg"
