--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,3 +1,7 @@
 <app-nabvar></app-nabvar>
-<app-banner></app-banner>
-<app-menu-item></app-menu-item>
+@defer () {
+    <app-banner></app-banner> 
+    <app-menu-item></app-menu-item> 
+}
+
+
