--- a/src/app/components/nabvar/menu-item/menu-item.component.scss
+++ b/src/app/components/nabvar/menu-item/menu-item.component.scss
@@ -34,20 +34,18 @@
   align-items: center;
   background: linear-gradient(to right, #000000, rgb(2, 65, 255,0.5));
   background-size: 200% 100%;
-  /*Aseguraqueelgradientecubraeláreaypermitalaanimación*/animation: gradientAnimation 20s ease infinite;
-  /*Aplicalaanimación*/min-height: 100vh;
-  /*Aseguraqueelfondoocupetodalapantalla*/width: 100%;
-  /*Aseguraqueocupetodoelanchodelapantalla*/box-sizing: border-box;
-  /*Aseguraquepaddingybordernoafecteneltamaño*/overflow-x: hidden;
-   /* Evita desplazamiento horizontal */;
-  -webkit-animation: gradientAnimation 10s ease infinite;
+  animation: gradientAnimation 20s ease infinite;
+  min-height: 100vh;
+  width: 100%;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 /* Título */
 h2.text-center {
   text-align: center;
   color: #e0c097; /* Un dorado claro elegante */
-  font-family: 'Merriweather', serif; /* Fuente serif para un toque formal */
+  
   font-size: 2.5rem; /* Tamaño de fuente más grande */
   font-weight: bold;
   letter-spacing: 1px; /* Espaciado entre letras para un efecto refinado */
@@ -225,6 +223,7 @@ h2.text-center::after {
 
   .text-content {
     text-align: center;
+   
   }
 
   .section-title {
