--- a/src/app/components/nabvar/nabvar.component.scss
+++ b/src/app/components/nabvar/nabvar.component.scss
@@ -15,9 +15,12 @@
   top: 0;
   width: 100%;
   z-index: 1000;
-  background: linear-gradient(to right, #000000, rgb(2, 65, 255,0.5)); /* De blanco a azul oscuro */
-  background-size: 200% 100%; /* Asegura que el gradiente cubra el área y permita la animación */
-  animation: gradientAnimation 10s ease infinite; /* Aplica la animación del gradiente */
+  background: linear-gradient(to right, #000000, rgb(2, 65, 255,0.5));
+  background-size: 200% 100%;
+  /*Aseguraqueelgradientecubraeláreaypermitalaanimación*/animation: gradientAnimation 20s ease infinite;
+
+   /* Evita desplazamiento horizontal */;
+  -webkit-animation: gradientAnimation 20s ease infinite;
   .navbar-brand,
   .nav-link {
     color: #e0c097; /* Color de texto inicial */
