--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,8 +1,16 @@
 <!-- Banner Section -->
 <section id="banner" class="banner">
   <div id="banner-content">
-    <img src="../../../assets/salem_final.png" alt="Logo" id="banner-logo">
-    <h2 id="banner-text">El socio tecnológico a su medida
+    <h2 id="animatedText">
+      <div>
+        <span *ngFor="let word of words.slice(0, 3)" [style.animation-delay]="word.delay + 's'">{{ word.text }}&nbsp;</span>
+      </div>
+      <div>
+        <span *ngFor="let word of words.slice(3, 5)" [style.animation-delay]="word.delay + 's'">{{ word.text }}&nbsp;</span>
+      </div>
+      <div>
+        <span *ngFor="let word of words.slice(5)" [style.animation-delay]="word.delay + 's'">{{ word.text }}&nbsp;</span>
+      </div>
     </h2>
   </div>
   </section>
