--- a/src/app/components/nabvar/nabvar.component.html
+++ b/src/app/components/nabvar/nabvar.component.html
@@ -9,10 +9,10 @@
       <!-- Items alineados a la derecha -->
       <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" (click)="onNavigate('banner')">Home</a>
+          <button class="nav-link" (click)="onNavigate('banner')">Home</button>
         </li>
         <li class="nav-item">
-          <a class="nav-link" (click)="onNavigate('presentation')">¿Por qué elegirnos?</a>
+          <button class="nav-link" (click)="onNavigate('presentation')">¿Por qué elegirnos?</button>
         </li>
 
         <li class="nav-item dropdown">
