--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -25,6 +25,7 @@
  
 }
 #animatedText span {
+  text-shadow: #000000 0 4px 4px;
   opacity: 0;
   animation: fadeIn 3s forwards;
   font-size: 2.5rem; /* Tamaño de fuente más grande */
